# edge-develop

./: .gitignore  AGENTS.md  README.md  pyproject.toml
YOLO_UPDATE/: .gitignore  README.md  pyproject.toml
YOLO_UPDATE/configs/data/: dataset.example.yaml
YOLO_UPDATE/configs/models/: yolo_update_micro_b.yaml  yolo_update_micro_l.yaml  yolo_update_micro_s.yaml
YOLO_UPDATE/configs/train/: default.yaml
YOLO_UPDATE/docs/: CHANGES_BENEFITS_AND_MICRO_OBJECT_MATH.md  YOLO_ARCHITECTURE_VALIDATION.md
YOLO_UPDATE/scripts/: smoke_pipeline.py  smoke_train.py  train.py  validate.py  validate_architecture.py
YOLO_UPDATE/tests/: test_yolo_update_architecture.py  test_yolo_update_training.py
YOLO_UPDATE/yolo_update/: __init__.py  config.py
YOLO_UPDATE/yolo_update/data/: fewshot_episode_sampler.py  synthetic.py  tiny_object_augment.py  yolo_dataset.py
YOLO_UPDATE/yolo_update/deploy/: export_onnx.py  tensorrt_build.py
YOLO_UPDATE/yolo_update/engine/: __init__.py  trainer.py
YOLO_UPDATE/yolo_update/eval/: detection_metrics.py  domain_slice_report.py  micro_object_metrics.py
YOLO_UPDATE/yolo_update/inference/: __init__.py  decoder.py  merge.py
YOLO_UPDATE/yolo_update/losses/: assignment.py  nwd_loss.py
YOLO_UPDATE/yolo_update/models/: __init__.py  blocks.py  model.py
YOLO_UPDATE/yolo_update/models/backbone/: __init__.py  yolo_update.py
YOLO_UPDATE/yolo_update/models/heads/: mask_prototype.py  open_vocab_embedding.py  unified_anchor_free.py
YOLO_UPDATE/yolo_update/training/: __init__.py  criterion.py
YOLO_UPDATE/yolo_update/utils/: seed.py
(+69 files in other folders)
