[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo-micro"
version = "0.1.0"
description = "YOLO-Micro prototype for native-resolution micro-object detection and unified multi-task vision."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "AK Vision Engineering" }]
dependencies = []

[project.optional-dependencies]
torch = ["torch>=2.2"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

