[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo-update"
version = "0.1.0"
description = "YOLO Update: P1/P2-preserving YOLO-family model for micro-object detection."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "AK Vision Engineering" }]
dependencies = [
  "numpy>=1.26",
  "pillow>=10",
  "pyyaml>=6",
  "torch>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["yolo_update*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

